--- a/LibraryManagement/LibraryManagement.csproj
+++ b/LibraryManagement/LibraryManagement.csproj
@@ -11,9 +11,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibraryManagement.Services\LibraryManagement.Services.csproj" />
     <ProjectReference Include="..\LibraryManagementData\LibraryManagementData.csproj" />
   </ItemGroup>
 
